Login & Registration Form Design

--- a/source/TODO/Shared/Shared.csproj
+++ b/source/TODO/Shared/Shared.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="symbols\" />
     <Folder Include="Tables\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
