Read Users From Database

--- a/source/TODO/PresentationLayer/PresentationLayer.csproj
+++ b/source/TODO/PresentationLayer/PresentationLayer.csproj
@@ -107,5 +107,15 @@
   <ItemGroup>
     <None Include="Resources\registration.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj">
+      <Project>{A7887F65-A297-4DE6-9668-D7436F58EAC6}</Project>
+      <Name>BusinessLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Shared\Shared.csproj">
+      <Project>{A0890D23-E17B-4D53-829D-7AD9EBE1CDC0}</Project>
+      <Name>Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
