--- a/source/TODO/PresentationLayer/PresentationLayer.csproj
+++ b/source/TODO/PresentationLayer/PresentationLayer.csproj
@@ -84,6 +84,9 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ObligationsForm.resx">
+      <DependentUpon>ObligationsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
