Read Obligations From Database

--- a/source/TODO/Shared/Shared.csproj
+++ b/source/TODO/Shared/Shared.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IObligationRepository.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Models\Obligation.cs" />
     <Compile Include="Models\User.cs" />
