--- a/source/TODO/PresentationLayer/PresentationLayer.csproj
+++ b/source/TODO/PresentationLayer/PresentationLayer.csproj
@@ -139,5 +139,11 @@
   <ItemGroup>
     <None Include="Resources\profile_symbol-removebg-preview.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\profile_symbol-removebg-preview1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\obligation_symbol.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
