Tests For Obligations

--- a/source/TODO/Tests/Tests.csproj
+++ b/source/TODO/Tests/Tests.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ObligationBusinessTests.cs" />
     <Compile Include="UserBusinessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
